<resources>
    <string name="tlycs_url" translatable="false">https://www.thelifeyoucansave.org/</string>

    <string name="app_name">Donate</string>
    <string name="i_saved">I Saved</string>
    <string name="keyboard">Keyboard</string>
    <string name="totals">Totals</string>
    <string name="money">£%1$,.2f</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="save">Save</string>
    <string name="back_space">Back space</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="impact">Impact</string>
    <string name="impact_edit_hint">Donate</string>
    <string name="charity_header_image_url">
        https://www.thelifeyoucansave.org/portals/0/images/charities/header-bg-%1$s.jpg
    </string>
    <string name="impact_subtitle">Choose the charity to see the impact</string>
    <string name="undo">Undo</string>
</resources>
