<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:android="http://schemas.android.com/apk/res/android"
       tools:showIn="@layout/fragment_keyboard_layout">

    <org.d.ui.view.KeyButton
        android:id="@+id/button_1"
        style="@style/keyboard"
        app:layout_column="0"
        app:layout_row="0"
        app:text="@string/one"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/button_2"
        style="@style/keyboard"
        app:layout_column="1"
        app:layout_row="0"
        app:text="@string/two"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/button_3"
        style="@style/keyboard"
        app:layout_column="2"
        app:layout_row="0"
        app:text="@string/three"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/button_4"
        style="@style/keyboard"
        app:layout_column="0"
        app:layout_row="1"
        app:text="@string/four"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/button_5"
        style="@style/keyboard"
        app:layout_column="1"
        app:layout_row="1"
        app:text="@string/five"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/button_6"
        style="@style/keyboard"
        app:layout_column="2"
        app:layout_row="1"
        app:text="@string/six"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/button_7"
        style="@style/keyboard"
        app:layout_column="0"
        app:layout_row="2"
        app:text="@string/seven"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/button_8"
        style="@style/keyboard"
        app:layout_column="1"
        app:layout_row="2"
        app:text="@string/eight"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/button_9"
        style="@style/keyboard"
        app:layout_column="2"
        app:layout_row="2"
        app:text="@string/nine"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/dot"
        style="@style/keyboard"
        app:layout_column="0"
        app:layout_row="3"
        app:text="@string/dot"/>

    <org.d.ui.view.KeyButton
        android:id="@+id/button_0"
        style="@style/keyboard"
        app:layout_column="1"
        app:layout_row="3"
        app:text="@string/zero"/>


</merge>